# PicTalk

./: .sample.env  README.md  main.py  pyproject.toml  tasks.py
data/: output-2024-04-28-13-06-24.flac
